00006 and now new

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 17 жовтня - початок проекту
 http://ukrfonts.com
 https://github.com/sevlyar/go-daemon/
+https://github.com/takama/daemon
+nohup ./myexecutable &
